Spacing between login/signup fix on mobile Best I can do in this short time span for mobile slider text visibility

--- a/src/app/base/less/base.less
+++ b/src/app/base/less/base.less
@@ -9,6 +9,9 @@
 	  text-transform: uppercase;
 	}
 	& > li > span {
+	  @media(max-width:@screen-xs-max) {
+		display:none;
+	  }
 	  color:@navbar-default-link-color;
 	  padding-top:@navbar-padding-vertical;
 	  padding-bottom:@navbar-padding-vertical;
