--- a/src/app/home/less/home.less
+++ b/src/app/home/less/home.less
@@ -202,6 +202,9 @@ form[name = 'ordercloud_registration'] span.help-block {
         background-color: #ffffff;
         min-height: 320px!important;
     }
+    p {
+        min-height:180px;
+    }
 }
 
 .buttonStories {
@@ -940,7 +943,7 @@ width: 297px;
 
     .home-alt-carousel .carousel-caption{
       @media (max-width:767px){
-         width:200px;
+         width:400px;
          left:15%;
        }
     }
